# streamhaul

./: .editorconfig  .gitignore  .gitmessage  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  LLD.md  PRD.md  README.md  SECURITY.md  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/rulesets/: main-branch-protection.json
.github/workflows/: ci.yml  fuzz-nightly.yml
bins/streamhaul-client/: Cargo.toml
bins/streamhaul-client/src/: main.rs
bins/streamhaul-host/: Cargo.toml
bins/streamhaul-host/src/: main.rs
bins/streamhaul-preview/: Cargo.toml
bins/streamhaul-preview/src/: lib.rs
bins/streamhaul-preview/tests/: loopback.rs
bins/streamhaul-signaling/: Cargo.toml
bins/streamhaul-signaling/src/: main.rs
bins/streamhaul-webrtc-host/: Cargo.toml
bins/streamhaul-webrtc-host/fixtures/: sample_h264.shv
bins/streamhaul-webrtc-host/src/: lib.rs  main.rs
bins/streamhaul-webrtc-preview/: Cargo.toml
bins/streamhaul-webrtc-preview/src/: lib.rs  main.rs
bins/streamhaul-webrtc-preview/tests/: live_frame_source.rs
clients/web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
crates/sh-adaptive/: Cargo.toml  README.md
crates/sh-adaptive/examples/: allocation_table.rs
crates/sh-adaptive/src/: allocator.rs  bitrate.rs  classifier.rs  controller.rs  gcc.rs  lib.rs  loss_recovery.rs  pacer.rs  scream.rs  stats.rs  util.rs
crates/sh-adaptive/tests/: qoe_under_transfer.rs
crates/sh-clipboard/: Cargo.toml  README.md
crates/sh-clipboard/fuzz/: Cargo.toml  README.md
crates/sh-clipboard/fuzz/fuzz_targets/: clipboard_sanitize.rs
crates/sh-clipboard/src/: access.rs  error.rs  lib.rs  noop.rs  recording.rs  sanitize.rs
crates/sh-codec-hw/: Cargo.toml
crates/sh-codec-hw/fuzz/: Cargo.toml  README.md
crates/sh-codec-hw/fuzz/fuzz_targets/: raw_audio_decode.rs  raw_decode.rs
crates/sh-codec-hw/src/: lib.rs  mode_switch.rs  negotiation.rs  raw.rs  raw_audio.rs
crates/sh-codec-openh264/: Cargo.toml
crates/sh-codec-openh264/examples/: gen_browser_fixture.rs
crates/sh-codec-openh264/src/: decoder.rs  encoder.rs  lib.rs
crates/sh-codec-openh264/tests/: pipeline_roundtrip.rs
crates/sh-core/: Cargo.toml
crates/sh-core/fuzz/: Cargo.toml
crates/sh-core/fuzz/fuzz_targets/: fuzz_reassembler_ingest.rs  ugc_decode.rs  ugc_verify.rs
crates/sh-core/src/: file.rs  harness.rs  input_harness.rs  lib.rs  packetize.rs  pipeline.rs  session.rs  stats.rs
crates/sh-core/src/authz/: authorizer.rs  capabilities.rs  epoch.rs  mod.rs  ugc.rs
crates/sh-core/tests/: file_transfer.rs  input_rtt_harness.rs  loopback_harness.rs  session_negotiation.rs
crates/sh-crypto/: Cargo.toml  README.md
crates/sh-crypto-wasm/: Cargo.toml  README.md
crates/sh-crypto-wasm/src/: lib.rs
crates/sh-crypto/fuzz/: Cargo.toml  README.md
crates/sh-crypto/fuzz/fuzz_targets/: bindcert_decode.rs  channel_frame_open.rs  identity_decode.rs  noise_handshake_read.rs  pairing_code_parse.rs  pake_msg_parse.rs  peer_auth_decode.rs  sig_decode.rs
crates/sh-crypto/src/: bind_cert.rs  channel_crypto.rs  clock.rs  error.rs  identity.rs  keystore.rs  lib.rs  noise.rs  pairing.rs  peer_auth.rs  sas.rs  signature.rs  software_keystore.rs
crates/sh-ice/: Cargo.toml  README.md
crates/sh-ice/fuzz/: Cargo.toml
crates/sh-ice/fuzz/fuzz_targets/: stun_decode.rs  turn_decode.rs
crates/sh-ice/src/: agent.rs  candidate.rs  error.rs  lib.rs  steering.rs  stun.rs  transport.rs  turn.rs
crates/sh-input/: Cargo.toml  README.md
crates/sh-input/src/: coord.rs  error.rs  injector.rs  lib.rs  noop.rs  rate_limiter.rs  recording.rs
crates/sh-media/: Cargo.toml
crates/sh-platform-linux/: Cargo.toml
crates/sh-platform-linux/examples/: local_demo.rs
crates/sh-platform-linux/src/: capturer.rs  injector.rs  lib.rs
crates/sh-platform-mac/: Cargo.toml  README.md
crates/sh-platform-mac/src/: capturer.rs  injector.rs  keymap.rs  lib.rs
crates/sh-platform-win/: Cargo.toml  README.md
crates/sh-platform-win/src/: capturer.rs  injector.rs  keymap.rs  lib.rs
crates/sh-protocol/: Cargo.toml
crates/sh-protocol/fuzz/: Cargo.toml  README.md
crates/sh-protocol/fuzz/fuzz_targets/: shp_decode.rs
crates/sh-protocol/src/: bits.rs  capability.rs  clipboard.rs  common.rs  control.rs  error.rs  feedback.rs  file.rs  input.rs  lib.rs  transport_caps.rs  video.rs
crates/sh-render/: Cargo.toml
crates/sh-signaling/: Cargo.toml  README.md
crates/sh-signaling/fuzz/: Cargo.toml
crates/sh-signaling/fuzz/fuzz_targets/: fuzz_envelope_decode.rs
crates/sh-signaling/src/: auth.rs  backoff.rs  challenge.rs  client.rs  envelope.rs  error.rs  lib.rs  server.rs
crates/sh-signaling/tests/: peer_auth_integration.rs  signaling_integration.rs
crates/sh-transport/: Cargo.toml  README.md
crates/sh-transport/fuzz/: Cargo.toml  README.md
crates/sh-transport/fuzz/fuzz_targets/: framing_decode.rs
crates/sh-transport/src/: channel.rs  connection.rs  driver.rs  endpoint.rs  error.rs  insecure.rs  lib.rs  quic_binding.rs  webrtc.rs
crates/sh-transport/tests/: channel_loopback.rs  channel_priority.rs  dtls_identity_binding.rs  file_channel.rs  loopback.rs  webrtc_driver.rs
crates/sh-types/: Cargo.toml
crates/sh-types/src/: lib.rs
crates/sh-wasm/: Cargo.toml  README.md
crates/sh-wasm/src/: lib.rs
crates/sh-web-client/: Cargo.toml  README.md  webdriver.json
crates/sh-web-client/fuzz/: Cargo.toml
crates/sh-web-client/fuzz/fuzz_targets/: parse_sdp_fingerprint.rs
crates/sh-web-client/src/: lib.rs
crates/sh-web-client/tests/: browser_e2e.rs
docs/adr/: 0001-record-architecture-decisions.md  0002-core-technology-and-protocol-stack.md  0003-transport-finalization.md  0004-oss-codec-and-licensing.md  0005-unattended-access-and-recording-keys.md  0006-device-identity-fingerprint-and-verification.md  0007-noise-handshake-and-bindcert.md  0012-webrtc-gcc.md  (+31 more)
scripts/: setup-branch-protection.sh
(+60 files in other folders)
