[workspace]
resolver = "2"
# cargo-fuzz crates are their own workspaces and need a nightly toolchain; keep them out of the
# main workspace so `cargo build/clippy/test --workspace` and CI never touch them.
exclude = ["crates/sh-protocol/fuzz", "crates/sh-core/fuzz", "crates/sh-transport/fuzz", "crates/sh-codec-hw/fuzz", "crates/sh-crypto/fuzz", "crates/sh-signaling/fuzz", "crates/sh-ice/fuzz", "crates/sh-wasm"]
members = [
    "crates/sh-types",
    "crates/sh-protocol",
    "crates/sh-transport",
    "crates/sh-input",
    "crates/sh-media",
    "crates/sh-codec-hw",
    "crates/sh-adaptive",
    "crates/sh-crypto",
    "crates/sh-signaling",
    "crates/sh-ice",
    "crates/sh-render",
    "crates/sh-core",
    "bins/streamhaul-host",
    "bins/streamhaul-client",
]

# Shared metadata inherited by every crate via `field.workspace = true`.
[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zoza1982/streamhaul"
authors = ["Streamhaul contributors"]
rust-version = "1.82"

# Shared dependency versions. Members opt in with `dep.workspace = true`.
[workspace.dependencies]
thiserror = "2"
proptest = "1"
# bitflags 2.13.0: exact-pinned per security-dep policy (CLAUDE.md §7) — bitflags
# is the backing type for the Capabilities mask; a silent upgrade could change
# bit semantics. Pinned to match the version already resolved in Cargo.lock.
bitflags = "=2.13.0"
bytes = "1"
tokio = { version = "1", features = ["net", "rt", "sync"] }
tracing = "0.1"

# Cryptographic dependencies (P3+). Pinned to specific minor versions because
# any upgrade to crypto primitives requires a security review.
#
# ed25519-dalek 2.x: RFC-8032-compliant Ed25519 sign/verify.
# - `zeroize`: enables `ZeroizeOnDrop` for `SigningKey` (zeroes memory on drop).
# - `rand_core`: exposes `SigningKey::generate(rng)` for key generation.
# - `fast`: pre-computed tables for faster signing (no extra deps).
# - `std`: enables the standard library (required for error types).
# 2.2.0 is the latest stable 2.x release; we do NOT use the 3.0 RC because
# it is pre-release and has not been audited.
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["zeroize", "rand_core", "std", "fast"] }

# zeroize 1.x: explicit zeroing of secret key material on drop.
zeroize = { version = "1.9.0", features = ["derive"] }

# sha2 0.10.x: SHA-256 for DeviceIdentity fingerprint derivation.
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }

# rand_core 0.6.x: the version required by ed25519-dalek 2.x for the
# `CryptoRng` / `RngCore` bounds used by `SigningKey::generate`.
rand_core = { version = "0.6", features = ["getrandom"] }

# snow 0.9.6: Noise Protocol Framework implementation. UNAUDITED — wrapped behind
# NoiseHandshake/NoiseSession; see SECURITY.md. Exact-pinned per CLAUDE.md §7 (crypto deps).
# 0.9.6 excludes RUSTSEC-2024-0011 (unauthenticated nonce increment, patched in 0.9.5).
# A pre-GA security review of snow and our wrapper is tracked in the Risk Register.
snow = { version = "=0.9.6", default-features = false, features = ["default-resolver"] }

# x25519-dalek 2.0.1: X25519 Diffie-Hellman with zeroize-on-drop static keys.
# Exact-pinned per CLAUDE.md §7 (crypto deps).
x25519-dalek = { version = "=2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }

# hkdf 0.12.4: HKDF-SHA-256 for P3-4 keying material export seam.
# Exact-pinned per CLAUDE.md §7 (crypto deps). hkdf vendors its own hmac dependency.
hkdf = { version = "=0.12.4", default-features = false }

# hmac 0.12.1: HMAC-SHA1 for TURN REST API credential generation (sh-ice, P4-2).
# Exact-pinned per CLAUDE.md §7 (crypto deps).
hmac = { version = "=0.12.1", default-features = false }

# sha1 0.10.6: SHA-1 digest used exclusively for TURN credential HMAC (sh-ice, P4-2).
# Exact-pinned per CLAUDE.md §7. SHA-1 is used here per the coturn REST API spec, not for security.
sha1 = { version = "=0.10.6", default-features = false, features = ["std"] }

# crc32fast 1.4.2: CRC32 for STUN FINGERPRINT attribute (RFC 8489, sh-ice, P4-2).
# Exact-pinned per CLAUDE.md §7.
crc32fast = { version = "=1.4.2", default-features = false }

# md-5 0.10.6: MD5 used exclusively to derive the RFC 8489 §9.2 TURN long-term credential key
# (MD5(username:realm:password)).  This is mandated by the STUN/TURN RFCs; MD5 is NOT used for
# any security-sensitive comparison.  Exact-pinned per CLAUDE.md §7.
"md-5" = { version = "=0.10.6", default-features = false }

# base64 0.22.1: standard base64 encoding for TURN credential password (sh-ice, P4-2).
# Exact-pinned per CLAUDE.md §7.
base64 = { version = "=0.22.1", default-features = false, features = ["std"] }

# chacha20poly1305 0.10.1: IETF ChaCha20-Poly1305 AEAD for per-channel frame encryption (P3-4).
# Already present transitively via snow 0.9.6; pinned directly for explicit dep tracking.
# Same aead v0.5.2 major version — no duplicate; confirmed by cargo tree.
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }

# subtle 2.6.1: constant-time comparison for Noise static binding check.
# Exact-pinned per CLAUDE.md §7 (crypto deps).
subtle = { version = "=2.6.1", default-features = false }

# spake2 0.4.0: SPAKE2 balanced PAKE for unattended pairing (ADR-0008 §2).
#
# SECURITY WARNING: spake2 is UNAUDITED ("USE AT YOUR OWN RISK"). We treat it with
# the same posture as `snow`: wrapped behind `PakeExchange`, exact-pinned, fuzzed,
# and subject to a mandatory pre-GA security review (Risk Register: R-SPAKE2-AUDIT).
#
# Curve unification confirmed: spake2 0.4.0 depends on curve25519-dalek 4.x, which is
# the SAME major version already used by ed25519-dalek 2.x and x25519-dalek 2.x in this
# workspace. `cargo tree -p sh-crypto -i curve25519-dalek` shows a single v4.x entry.
spake2 = { version = "=0.4.0", default-features = false }

# async-trait 0.1: erasure of `async fn` in object-safe trait definitions.
async-trait = "0.1"

# Workspace-wide lints enforce the CLAUDE.md panic-ban and safety posture.
# Members opt in with `[lints] workspace = true`. CI runs clippy with `-D warnings`,
# so every `warn` below is effectively a hard error in CI.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

# Release profile tuned for a latency-sensitive product (used from P0-10 onward).
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
