[package]
name = "streamhaul-client"
description = "Streamhaul native desktop client (connect → decode → render; input capture)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sh-core = { path = "../../crates/sh-core" }

[lints]
workspace = true
