[package]
name = "streamhaul-host"
description = "Streamhaul host agent daemon (capture → encode → transport; input injection; RPC)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sh-core = { path = "../../crates/sh-core" }

[lints]
workspace = true
