[package]
name = "streamhaul-webrtc-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# streamhaul-webrtc-host: native WebRTC answerer for browser↔native interop testing (P5-3).
# Connects to a streamhaul-signaling server, accepts a browser SDP offer, negotiates a DTLS
# DataChannel, exchanges a simple echo frame, and exits. Intended for local integration tests.
# NOT for production use.
#
# As of ADR-0032 this crate is both a library (src/lib.rs — connection logic + VideoFrameSource)
# and a binary (src/main.rs — thin arg-parse shell). The library is used by the workspace-excluded
# `streamhaul-webrtc-preview` crate which provides the live X11-capture OpenH264 frame source.

[lib]
name = "streamhaul_webrtc_host"
path = "src/lib.rs"

[[bin]]
name = "streamhaul-webrtc-host"
path = "src/main.rs"

[dependencies]
sh-transport = { path = "../../crates/sh-transport" }
# sh-protocol: SHP CommonHeader/VideoHeader encoders to frame the baked H.264 clip the host streams
# to the browser (ADR-0031). No codec dep — the clip is pre-encoded bytes, so the OSS build links
# no H.264 encoder (ADR-0028/0029).
sh-protocol = { path = "../../crates/sh-protocol" }
# sh-input: the InputInjector trait + InputEvent. The host demuxes browser→host input frames off the
# DataChannel and injects them (remote control). The OS injector is supplied by the binary (ADR-0034).
sh-input = { path = "../../crates/sh-input" }
sh-signaling = { path = "../../crates/sh-signaling", features = ["insecure-lan"] }
# sh-crypto: the identity-bound Noise XK handshake + BindCert (P5-3 Stage 2, ADR-0014/0023). The
# host runs the responder side, commits its own DTLS fingerprint, and extracts the browser's
# committed DTLS fingerprint to pin (instead of the untrusted SDP `a=fingerprint`).
sh-crypto = { path = "../../crates/sh-crypto" }
sh-types = { path = "../../crates/sh-types" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "io-util", "time", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = { workspace = true }
# str0m: exact-pinned to match sh-transport's version (see sh-transport/Cargo.toml).
str0m = { version = "=0.20.0", default-features = false, features = ["rust-crypto"] }
bytes = { workspace = true }
# X25519 static-key generation for the Noise XK responder (the host owns its static so it can
# advertise the matching public key to the browser initiator).
x25519-dalek = { workspace = true }
rand_core = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
