[package]
name = "sh-adaptive"
description = "Congestion control (GCC/SCReAM), content classifier, and rate allocation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
sh-types = { path = "../sh-types" }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
