[package]
name = "sh-codec-hw"
description = "Video codec backends for Streamhaul. Phase-0 ships a portable raw (uncompressed) codec; hardware backends (NVENC/QSV/VideoToolbox/VA-API) land on the on-hardware session."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sh-media = { path = "../sh-media" }
sh-protocol = { path = "../sh-protocol" }
sh-types = { path = "../sh-types" }
sh-adaptive = { path = "../sh-adaptive" }
bytes.workspace = true
thiserror.workspace = true
# sh-codec-hw only uses tokio::sync::Semaphore.  Ideally we would specify
# `default-features = false, features = ["sync"]` here, but Cargo workspace
# resolver-2 ignores `default-features` on a member when the workspace
# declaration does not itself set `default-features = false`.  The workspace
# entry (`Cargo.toml` root) enables `["net", "rt", "sync"]`, so those three
# features are unified into every workspace member regardless.  Restricting
# the feature set here would require changing the workspace entry, which is
# out of scope for this PR (it would need auditing every other consumer).
# Tracked as a follow-up cleanup task.
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
