[package]
name = "sh-codec-hw"
description = "Video codec backends for Streamhaul. Phase-0 ships a portable raw (uncompressed) codec; hardware backends (NVENC/QSV/VideoToolbox/VA-API) land on the on-hardware session."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sh-media = { path = "../sh-media" }
sh-protocol = { path = "../sh-protocol" }
sh-types = { path = "../sh-types" }
sh-adaptive = { path = "../sh-adaptive" }
bytes.workspace = true
thiserror.workspace = true
# sh-codec-hw only uses tokio::sync::Semaphore.  Ideally we would specify
# `default-features = false, features = ["sync"]` here, but Cargo workspace
# resolver-2 ignores `default-features` on a member when the workspace
# declaration does not itself set `default-features = false`.  The workspace
# entry (`Cargo.toml` root) enables `["net", "rt", "sync"]`, so those three
# features are unified into every workspace member regardless.  Restricting
# the feature set here would require changing the workspace entry, which is
# out of scope for this PR (it would need auditing every other consumer).
# Tracked as a follow-up cleanup task.
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
## Enable the HEVC / H.265 codec rung in the degradation ladder and capability offers.
##
## **OFF by default** — the OSS Apache-2.0 build must not enable HEVC, which is encumbered by
## overlapping patent pools (MPEG-LA, Access Advance, Velos).  Enabling this feature produces a
## **commercial build** that requires a valid HEVC license from the patent-pool holder(s) (see
## `docs/adr/0004-oss-codec-and-licensing.md`).  Neither this crate nor the workspace bundles
## a software H.265 encoder; HEVC is always accessed via OS system codec APIs
## (VideoToolbox / Media Foundation / VA-API).
hevc = []

[lints]
workspace = true
