[package]
name = "sh-core"
description = "Umbrella facade composing the Streamhaul engine; Phase-0 pipeline and latency harness."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
harness = ["dep:quinn", "dep:sh-codec-hw", "dep:sh-input"]

[dependencies]
sh-types = { path = "../sh-types" }
sh-media = { path = "../sh-media" }
sh-transport = { path = "../sh-transport" }
sh-protocol = { path = "../sh-protocol" }
sh-crypto = { path = "../sh-crypto" }
sh-signaling = { path = "../sh-signaling" }
sh-ice = { path = "../sh-ice" }
async-trait = "0.1"
bytes.workspace = true
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "sync", "time", "macros"] }
thiserror.workspace = true
bitflags.workspace = true
sha2.workspace = true
subtle.workspace = true
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
sh-codec-hw = { path = "../sh-codec-hw", optional = true }
sh-input = { path = "../sh-input", optional = true }

[dev-dependencies]
sh-transport = { path = "../sh-transport", features = ["insecure-lan"] }
sh-media = { path = "../sh-media" }
sh-crypto = { path = "../sh-crypto" }
sh-signaling = { path = "../sh-signaling" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
proptest.workspace = true
rand_core.workspace = true
rand_chacha = "=0.3.1"
x25519-dalek.workspace = true
str0m = { version = "=0.20.0", default-features = false, features = ["rust-crypto"] }

[[test]]
name = "loopback_harness"
required-features = ["harness"]

[[test]]
name = "input_rtt_harness"
required-features = ["harness"]

[lints]
workspace = true
