# This crate targets wasm32-unknown-unknown exclusively.  An empty [workspace] table keeps it
# out of the root workspace so `cargo build/test --workspace` never tries to build it for the
# host target, and the workspace exclude list in the root Cargo.toml does the same.
[workspace]

[package]
name = "sh-crypto-wasm"
description = "WebAssembly crypto bridge: exposes sh-crypto identity, peer-auth, and Noise XK/IK handshake to browser JS via wasm-bindgen."
# Not in the workspace (wasm32-only target) — all fields are explicit, not inherited.
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zoza1982/streamhaul"
rust-version = "1.82"

# cdylib  = the .wasm binary loaded by wasm-bindgen / bundlers
# rlib    = enables `wasm-pack test --node` to link test harness code
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sh-crypto = { path = "../sh-crypto" }
sh-types  = { path = "../sh-types" }
wasm-bindgen = "0.2"
# js-sys: provides Date::now() for the wasm-compatible clock implementation.
# Pulled in transitively by wasm-bindgen; listed explicitly for clarity.
js-sys = "0.3"

# async-trait: required to implement sh_crypto::Keystore for TrustAllKeystore.
# Same version as the workspace (0.1.x).
async-trait = "0.1"

# subtle: constant-time comparison for verify_peer_fingerprint.
# Exact-pinned to match the workspace crypto-dep policy (CLAUDE.md §7).
subtle = { version = "=2.6.1", default-features = false }

# Force WebCrypto CSPRNG backend on wasm32-unknown-unknown.
# Without the `js` feature, getrandom panics on wasm with "no entropy source found".
# With it, getrandom calls the browser/Node crypto API — the only FIPS-quality RNG
# available in the wasm sandbox. This is the sole entropy source for all key generation,
# nonce production, and Noise ephemeral key generation in this crate.
#
# On non-wasm targets (cargo test / native clippy run during development) getrandom
# ignores the `js` feature and uses the OS entropy source — no double-opt-in needed.
getrandom = { version = "0.2", features = ["js"] }

# rand_core: needed for OsRng (CSPRNG for X25519 static key generation in WasmNoiseHandshake).
# The `getrandom` feature enables OsRng; together with the `getrandom = { features=["js"] }`
# dep above, OsRng uses WebCrypto on wasm32. Pinned to the same major used by ed25519-dalek 2.x.
rand_core = { version = "0.6", features = ["getrandom"] }

# Lightweight single-future block_on executor for calling async Keystore / NoiseHandshake
# methods from synchronous wasm-bindgen entry points. All futures driven here are
# immediately-resolving (SoftwareKeystore has no real async I/O) so there is no spin-wait.
# `pollster` is no_std-compatible and compiles to wasm32-unknown-unknown cleanly.
pollster = "=0.3.0"  # Exact-pinned: 0.3.x is wasm-compatible; 0.4 added a proc-macro dependency (syn/proc-macro2, larger binary); 0.3.0 is the version resolved in the lockfile.

# x25519 static secret for the Noise handshake (re-export from workspace to share the
# same version already resolved by sh-crypto, avoiding duplicate curve25519-dalek).
x25519-dalek = { version = "=2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Mirror the workspace lint settings so this excluded crate obeys the same quality gates.
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
