[package]
name = "sh-ice"
description = "ICE/STUN/TURN orchestration and P2P-vs-relay path selection."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
crc32fast = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }
subtle = { workspace = true }
md-5 = { workspace = true }
sh-types = { path = "../sh-types" }
